Fix formatting issues in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,13 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2761
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0
-
-\f0\fs24 \cf0 \{\
-  "$schema": "https://openapi.vercel.sh/vercel.json",\
-  "version": 2,\
-  "framework": "vite",\
-  "buildCommand": "npm run build",\
-  "outputDirectory": "dist",\
-  "cleanUrls": true,\
-  "headers": [\
-    \{ "source": "/(.*)\\\\.(js|css)", "headers": [\{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" \}] \},\
-    \{ "source": "/(.*)\\\\.(png|jpg|jpeg|gif|webp|avif|svg)", "headers": [\{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" \}] \},\
-    \{ "source": "/catalog.json", "headers": [ \{ "key": "Cache-Control", "value": "public, max-age=300, must-revalidate" \}, \{ "key": "Content-Type", "value": "application/json; charset=utf-8" \} ] \}\
-  ]\
-\}}
+{
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "version": 2,
+  "framework": "vite",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "cleanUrls": true,
+  "headers": [
+    { "source": "/(.*)\\.(js|css)", "headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }] },
+    { "source": "/(.*)\\.(png|jpg|jpeg|gif|webp|avif|svg)", "headers": [{ "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }] },
+    { "source": "/catalog.json", "headers": [ { "key": "Cache-Control", "value": "public, max-age=300, must-revalidate" }, { "key": "Content-Type", "value": "application/json; charset=utf-8" } ] }
+  ]
+}
