--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2761
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0
-
-\f0\fs24 \cf0 \{\
-  "name": "arthen-landing",\
-  "version": "0.1.0",\
-  "private": true,\
-  "type": "module",\
-  "scripts": \{\
-    "dev": "vite",\
-    "build": "vite build",\
-    "preview": "vite preview --port 4173",\
-    "typecheck": "tsc --noEmit"\
-  \},\
-  "dependencies": \{\
-    "framer-motion": "^11.0.0",\
-    "lucide-react": "^0.441.0",\
-    "react": "^18.3.1",\
-    "react-dom": "^18.3.1"\
-  \},\
-  "devDependencies": \{\
-    "@types/react": "^18.3.3",\
-    "@types/react-dom": "^18.3.0",\
-    "autoprefixer": "^10.4.20",\
+{
+  "name": "arthen-landing",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview --port 4173",
+    "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.441.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.8"
+  }
+}
+utoprefixer": "^10.4.20",\
     "postcss": "^8.4.47",\
     "tailwindcss": "^3.4.13",\
     "typescript": "^5.6.2",\
